--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -1,6 +1,12 @@
 {
+  "activity.label.activityIntroduction": "Activity Introduction",
+  "activity.label.basicSettings": "Basic Setings",
   "activity.label.limit": "Limit",
+  "activity.label.publishSettings": "Publish Settings",
   "activity.label.published": "Published",
+  "activity.label.sessionAdmin": "Session Admin",
+  "activity.label.settings": "Settings",
+  "activity.label.showParticipantsNumber": "Show Participants Count",
   "activity.label.ticketEndedAt": "Ticket End Time",
   "activity.label.ticketStartedAt": "Ticket Starting Time",
   "activity.status.NotPublishedTicket": "Suspended.",
@@ -9,8 +15,10 @@
   "activity.status.draft": "Draft",
   "activity.status.expired": "Expired",
   "activity.status.finished": "Finished",
+  "activity.status.hidden": "Hidden",
   "activity.status.holding": "Holding",
   "activity.status.notPublished": "Not Published",
+  "activity.status.public": "Show",
   "activity.status.selling": "Selling",
   "activity.status.soldOut": "Sold Out",
   "activity.status.starting": "Starting",
@@ -22,6 +30,11 @@
   "activity.term.threshold": "Threshold",
   "activity.term.ticketPlan": "Ticket Plan",
   "activity.term.ticketPlanTitle": "Ticket Plan Title",
+  "activity.text.noDescription": "No activity description.",
+  "activity.text.noTicketPlan": "No ticket Plan.",
+  "activity.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "activity.text.publishedNotation": "現在你的活動已經發佈，此活動會出現在頁面上。",
+  "activity.text.unpublishedNotation": "因你的活動未發佈，此活動並不會顯示在頁面上。",
   "activity.ui.addTicketPlan": "Add Ticket Plan",
   "activity.ui.createSession": "Create Session",
   "activity.ui.createTicketPlan": "Create Ticket Plan",
@@ -30,6 +43,8 @@
   "activity.ui.threshold": "At least",
   "activity.warning.selectSession": "Select Session",
   "appointment.label.allInstructors": "All Instructors",
+  "appointment.label.createPeriod": "Create Period",
+  "appointment.label.duration": "Duration (minutes)",
   "appointment.label.enrollments": "Enrollments",
   "appointment.label.instructor": "Instructor",
   "appointment.label.minutes": "Minutes",
@@ -50,9 +65,22 @@
   "appointment.status.isPublished": "Published",
   "appointment.status.notPublished": "Not Published",
   "appointment.term.period": "Period",
+  "appointment.term.periodType": "Period Type",
   "appointment.term.planTitle": "Plan Title",
+  "appointment.term.startedAt": "Starting Time",
+  "appointment.text.durationTips": "設定單次預約服務的時間長度",
+  "appointment.text.noDuration": "No duration.",
+  "appointment.text.noListPrice": "No list price.",
+  "appointment.text.noPeriod": "No period.",
+  "appointment.text.noPeriodCreated": "No period.",
+  "appointment.text.noTitle": "No plan title.",
+  "appointment.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "appointment.text.publishedNotation": "預約方案已經發佈，學生將能購買預約。",
+  "appointment.text.selectStartedAt": "starting time",
+  "appointment.text.unpublishedNotation": "預約方案未發佈，此方案並不會顯示在頁面上，學生也不能購買此方案。",
   "appointment.ui.addToCalendar": "Add to Calendar",
   "appointment.ui.close": "Close",
+  "appointment.ui.createPlan": "Create Plan",
   "appointment.ui.editPeriod": "Edit Period",
   "appointment.ui.emptyAppointment": "No appointment on schedule",
   "appointment.ui.joinMeeting": "Join Meeting",
@@ -60,36 +88,34 @@
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period ",
   "appointmnet.ui.appointmentText": "{name} made an appointment to {title}",
+  "common.event.loadAppError": "無法取得應用程式",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
   "common.event.publishingFailed": "Publishing Failed",
+  "common.event.successfullyCreated": "Created",
   "common.event.successfullySaved": "Saved",
   "common.event.successfullyUpdatePassword": "Password Updated",
-  "common.label.account": "Account",
-  "common.label.activityTicket": "Activity",
+  "common.label.allActivityTicket": "All activities",
+  "common.label.allMembershipCard": "All membershipcards",
+  "common.label.allMerchandise": "All merchandises",
+  "common.label.allProgram": "All perpetual programs",
+  "common.label.allProgramContent": "All program contents",
+  "common.label.allProgramPlan": "All program plans",
   "common.label.alreadyMember": "Already a member?",
-  "common.label.avatar": "Avatar",
   "common.label.cannotRecover": "The action cannot be recovered.",
   "common.label.caption": "Caption",
-  "common.label.card": "Membership Card",
-  "common.label.category": "Category",
   "common.label.confirmPassword": "Confirm Password",
-  "common.label.creatorTitle": "Title",
+  "common.label.consumption": "Consumption",
   "common.label.currentPassword": "Current Password",
   "common.label.day": "day",
   "common.label.discountDownPrice": "Discount Down Price",
-  "common.label.email": "Email",
-  "common.label.endedAt": "End Time",
   "common.label.forgotPassord": "Forgot Password",
   "common.label.goToLogin": "Login",
+  "common.label.holdingPoints": "Points",
   "common.label.introduction": "Introduction",
-  "common.label.listPrice": "List Price",
-  "common.label.memberName": "Name",
+  "common.label.lastLogin": "Last Login",
   "common.label.memberPage": "My Page",
-  "common.label.merchandise": "Merchandise",
-  "common.label.meta": "Short Description",
   "common.label.month": "month",
-  "common.label.name": "Name",
   "common.label.newPassword": "New Password",
   "common.label.notMember": "Not a member?",
   "common.label.optional": "Optional",
@@ -98,28 +124,21 @@
   "common.label.orderLogPrice": "Order Price",
   "common.label.orderLogStatue": "Order Status",
   "common.label.outdated": "Outdated",
-  "common.label.password": "Password",
-  "common.label.periodType": "Period Type",
-  "common.label.phone": "Phone",
+  "common.label.perDay": "per day",
+  "common.label.perMonth": "per month",
+  "common.label.perWeek": "per week",
+  "common.label.points": "{points} points",
   "common.label.profileAdminTitle": "Profile",
   "common.label.profileBasic": "Basic",
-  "common.label.program": "Program",
-  "common.label.programContent": "Program Content",
-  "common.label.programPlan": "Program Plan",
   "common.label.roleAdmin": "Role",
-  "common.label.salePrice": "Sale Price",
+  "common.label.roleSettigs": "Role Settings",
   "common.label.salePriceEndTime": "End Time of Sale",
   "common.label.selectInstructor": "Select Instructor",
   "common.label.sellingStatus": "Selling Status",
   "common.label.sessionTitle": "Session Title",
-  "common.label.speciality": "Speciality",
-  "common.label.startedAt": "Starting Time",
-  "common.label.title": "Title",
   "common.label.totalPrice": "Total",
   "common.label.totalSales": "Total",
   "common.label.unavailableSelling": "Unavailable Now",
-  "common.label.unknowProduct": "Unknown Product",
-  "common.label.username": "Username or Email",
   "common.label.video": "Video",
   "common.label.week": "week",
   "common.label.year": "year",
@@ -143,16 +162,57 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.vouchers": "Vouchers",
+  "common.status.notComplete": "Not Complete",
   "common.status.orderFailed": "Failed",
   "common.status.orderRefund": "Refund",
   "common.status.orderSuccess": "Success",
   "common.status.orderUnpaid": "Unpaid",
+  "common.status.published": "Published",
+  "common.status.unpublished": "Unpublished",
+  "common.term.account": "Account",
+  "common.term.activityTicket": "Activity Ticket",
+  "common.term.appOwner": "App Owner",
+  "common.term.avatar": "Avatar",
+  "common.term.card": "Membership Card",
+  "common.term.category": "Category",
+  "common.term.cover": "Cover",
+  "common.term.creatorTitle": "Title",
+  "common.term.description": "Description",
+  "common.term.email": "Email",
+  "common.term.endedAt": "End Time",
+  "common.term.generalMember": "General Member",
   "common.term.instructor": "instructor",
+  "common.term.learningDuration": "Learning Duration",
+  "common.term.learningProgress": "Learning Progress",
+  "common.term.listPrice": "List Price",
+  "common.term.memberName": "Name",
+  "common.term.merchandise": "Merchandise",
+  "common.term.name": "Name",
+  "common.term.password": "Password",
+  "common.term.periodType": "Period Type",
+  "common.term.phone": "Phone",
+  "common.term.planDescription": "Plan Description",
+  "common.term.planTitle": "Plan title",
   "common.term.price": "price",
+  "common.term.program": "Program",
+  "common.term.programContent": "Program Content",
+  "common.term.programPlan": "Program Plan",
+  "common.term.salePrice": "Sale Price",
+  "common.term.shortDescription": "Short Description",
+  "common.term.speciality": "Speciality",
+  "common.term.startedAt": "Starting Time",
   "common.term.teachingAssistant": "Teaching Assistant",
+  "common.term.title": "Title",
+  "common.term.unknowProduct": "Unknow Product",
+  "common.term.username": "Username or Email",
+  "common.text.checkEmailNotation": "Check email and change password.",
   "common.text.dueDate": "due at {date}",
+  "common.text.emailNotReceived": "Email not received?",
+  "common.text.minutes": "{minutes} minutes",
   "common.text.noAssignedInstructor": "No assigned instructor.",
   "common.text.purchasedAt": "{name} purchased at {date}",
+  "common.text.resetPasswordNotation": "為了安全考量，請至信箱收信更換密碼",
+  "common.text.sentResetPasswordMail": "已寄送重設密碼信",
   "common.text.shortDescriptionPlaceholder": "limit in 30 characters",
   "common.text.totalActualSalse": "實際銷售總額 {dollars} 元",
   "common.text.totalActualSalseNotation": "銷售總額 - 訂閱首期折扣 = 實際銷售總額",
@@ -168,6 +228,7 @@
   "common.ui.comma": ", ",
   "common.ui.confirm": "Confirm",
   "common.ui.create": "Create",
+  "common.ui.creatorPageLink": "Creator Page",
   "common.ui.delete": "Delete",
   "common.ui.detail": "Detail",
   "common.ui.edit": "Edit",
@@ -179,6 +240,7 @@
   "common.ui.login": "Login",
   "common.ui.loginAndRegister": "Login / Register",
   "common.ui.logout": "Logout",
+  "common.ui.memberPageLink": "Member Page",
   "common.ui.or": "or",
   "common.ui.print": "Print",
   "common.ui.publish": "Publish",
@@ -189,7 +251,9 @@
   "common.ui.retryPayment": "Retry Payment",
   "common.ui.save": "Save",
   "common.ui.search": "Search",
+  "common.ui.sendEmailAgain": "Send Again",
   "common.ui.trial": "Trial",
+  "coommon.term.contentCreator": "Content Creator",
   "creator.label.creatorAppointemnts": "Appointment",
   "creator.label.creatorPodcast": "Podcats Program",
   "creator.label.creatorPrograms": "Program",
@@ -202,9 +266,10 @@
   "error.form.accountNameOrEmail": "Username or email is required.",
   "error.form.codes": "code must not be empty",
   "error.form.date": "select date",
+  "error.form.duration": "Duration is required.",
   "error.form.emailFormat": "not a valid email",
-  "error.form.exchangeItems": "至少選一個兌換項目",
-  "error.form.exchangeItemsAmount": "amount of exchangable items is required",
+  "error.form.exchangeItems": "Exchangable item is required.",
+  "error.form.exchangeItemsAmount": "Amount of exchangable items is required.",
   "error.form.isRequired": "{field} is required",
   "error.form.issueContent": "content is required",
   "error.form.memberSelect": "username or Email",
@@ -219,16 +284,33 @@
   "notification.term.notification": "Notification",
   "notification.ui.checkNotifications": "read more",
   "notification.ui.markAllAsRead": "Mark all as read",
+  "podcast.label.description": "Description",
+  "podcast.label.duration": "Duration (minutes)",
   "podcast.label.plan": "Plan",
+  "podcast.label.podcastProgramTitle": "Podcast Program Title",
   "podcast.label.salesCount": "Sales Count",
   "podcast.label.status": "Status",
   "podcast.status.notPublished": "Not Published",
   "podcast.status.planNotPublished": "停售，方案暫停對外銷售，並從廣播頁中隱藏",
   "podcast.status.planPublished": "發佈，立刻開賣訂閱方案",
   "podcast.status.published": "Published",
+  "podcast.term.audioFile": "Audio File",
+  "podcast.term.podcastAbstract": "Abstract",
+  "podcast.term.podcastCover": "Cover",
   "podcast.term.podcastPlan": "Podcast Plan",
+  "podcast.text.audioFileTips": "Accept format: .mp3\nFile size: 5MB",
+  "podcast.text.noAudio": "No audio file",
+  "podcast.text.noCover": "No cover",
+  "podcast.text.noDuration": "No duration",
+  "podcast.text.noInstructor": "No assigned instructor",
+  "podcast.text.noPrice": "No price",
+  "podcast.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "podcast.text.podcastCoverTips": "Recommended size: 1080*1080px",
+  "podcast.text.publishedNotation": "現在你的廣播已經發佈，此廣播並會出現在頁面上，學生將能購買此廣播。",
+  "podcast.text.unpublishedNotation": "因你的廣播未發佈，此廣播並不會顯示在頁面上，學生也不能購買此廣播。",
   "podcast.ui.createPodcastProgram": "Create",
   "podcast.ui.subscribe": "Subscribe",
+  "podcast.ui.uploadAudioFile": "Upload Audio File",
   "price.label.firstPeriod": "First Period",
   "price.label.free": "Free",
   "price.label.originalPrice": "Original Price",
@@ -269,11 +351,8 @@
   "program.label.subscriptionPlanType": "Subscription Plan",
   "program.label.unavailableForPastContent": "不可看過去內容",
   "program.lable.subscriptionPeriodType": "Period Type",
-  "program.status.isPublished": "Published",
-  "program.status.isUnpublished": "Unpublished",
   "program.status.issueOpen": "solving",
   "program.status.issueSolved": "solved",
-  "program.status.notComplete": "Not Complete",
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
   "program.text.deleteProgramDanger": "注意：只有在無人購買的情況下才能刪除課程。",
   "program.text.deleteProgramWarning": "請仔細確認是否真的要刪除課程，因為一旦刪除就無法恢復。",
@@ -353,5 +432,9 @@
   "upload.event.uploading": "Uploading",
   "upload.label.retry": "Retry",
   "upload.label.uploadFile": "Upload File",
+  "voucher.event.failedExchange": "Exchange Failed",
+  "voucher.event.failedInsert": "Insert Failed",
+  "voucher.event.successfullyExchange": "兌換成功，請到「我的主頁」查看",
+  "voucher.event.successfullyInsert": "Insert Successfully",
   "voucher.label.selectProducts": "Select Products"
 }
