[FEATURE] replace chineses ui string with react-intl

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -1,6 +1,5 @@
 {
   "activity.label.activityIntroduction": "Activity Introduction",
-  "activity.label.basicSettings": "Basic Setings",
   "activity.label.limit": "Limit",
   "activity.label.publishSettings": "Publish Settings",
   "activity.label.published": "Published",
@@ -53,7 +52,11 @@
   "appointment.label.perMonth": "per month",
   "appointment.label.perWeek": "per week",
   "appointment.label.perYear": "per year",
+  "appointment.label.periodSettings": "Period",
+  "appointment.label.planDescription": "Description",
+  "appointment.label.planSettings": "Plan",
   "appointment.label.price": "Price",
+  "appointment.label.salesSettings": "Sales",
   "appointment.label.seriesPeriod": "series",
   "appointment.label.singlePeriod": "period",
   "appointment.label.status": "Status",
@@ -95,28 +98,37 @@
   "common.event.successfullyCreated": "Created",
   "common.event.successfullySaved": "Saved",
   "common.event.successfullyUpdatePassword": "Password Updated",
+  "common.isContentCreator": "Content Creator",
+  "common.label.adminBackStage": "Admin Back Stage",
+  "common.label.all": "All",
   "common.label.allActivityTicket": "All activities",
+  "common.label.allMembers": "All Members",
   "common.label.allMembershipCard": "All membershipcards",
   "common.label.allMerchandise": "All merchandises",
   "common.label.allProgram": "All perpetual programs",
   "common.label.allProgramContent": "All program contents",
   "common.label.allProgramPlan": "All program plans",
   "common.label.alreadyMember": "Already a member?",
+  "common.label.baiscSettings": "Basic Settings",
   "common.label.cannotRecover": "The action cannot be recovered.",
   "common.label.caption": "Caption",
+  "common.label.categoryItem": "Category Item",
   "common.label.confirmPassword": "Confirm Password",
   "common.label.consumption": "Consumption",
   "common.label.currentPassword": "Current Password",
   "common.label.day": "day",
   "common.label.discountDownPrice": "Discount Down Price",
-  "common.label.forgotPassord": "Forgot Password",
+  "common.label.draft": "Draft",
+  "common.label.forgotPassword": "Forgot Password",
   "common.label.goToLogin": "Login",
   "common.label.holdingPoints": "Points",
   "common.label.introduction": "Introduction",
+  "common.label.isAppOwner": "App Owner",
   "common.label.lastLogin": "Last Login",
   "common.label.memberPage": "My Page",
   "common.label.month": "month",
   "common.label.newPassword": "New Password",
+  "common.label.newPasswordAgain": "new passowrd again",
   "common.label.notMember": "Not a member?",
   "common.label.optional": "Optional",
   "common.label.orderLogDate": "Order Date",
@@ -130,9 +142,14 @@
   "common.label.points": "{points} points",
   "common.label.profileAdminTitle": "Profile",
   "common.label.profileBasic": "Basic",
+  "common.label.programProgress": "Total Learning Statistics",
+  "common.label.publishAdmin": "Publish",
+  "common.label.publishSettings": "Publish Settings",
+  "common.label.resetPassword": "Reset Password",
   "common.label.roleAdmin": "Role",
   "common.label.roleSettigs": "Role Settings",
   "common.label.salePriceEndTime": "End Time of Sale",
+  "common.label.salesPlan": "Sales",
   "common.label.selectInstructor": "Select Instructor",
   "common.label.sellingStatus": "Selling Status",
   "common.label.sessionTitle": "Session Title",
@@ -142,6 +159,7 @@
   "common.label.video": "Video",
   "common.label.week": "week",
   "common.label.year": "year",
+  "common.label.yourNotification": "Your Notifications",
   "common.menu.activities": "Activities",
   "common.menu.activityAdmin": "Activity",
   "common.menu.appointmentAdmin": "Appointment",
@@ -177,6 +195,7 @@
   "common.term.category": "Category",
   "common.term.cover": "Cover",
   "common.term.creatorTitle": "Title",
+  "common.term.currentPassword": "Current Password",
   "common.term.description": "Description",
   "common.term.email": "Email",
   "common.term.endedAt": "End Time",
@@ -188,6 +207,7 @@
   "common.term.memberName": "Name",
   "common.term.merchandise": "Merchandise",
   "common.term.name": "Name",
+  "common.term.owner": "Owner",
   "common.term.password": "Password",
   "common.term.periodType": "Period Type",
   "common.term.phone": "Phone",
@@ -206,20 +226,28 @@
   "common.term.unknowProduct": "Unknow Product",
   "common.term.username": "Username or Email",
   "common.text.checkEmailNotation": "Check email and change password.",
+  "common.text.deleteCategoryNotation": "確定要刪除此類別？此動作無法復原",
   "common.text.dueDate": "due at {date}",
   "common.text.emailNotReceived": "Email not received?",
+  "common.text.emptyNotification": "No notification now",
+  "common.text.enterRegisteredEmail": "Fill in your registered email",
+  "common.text.forgotPassword": "Forgot password?",
   "common.text.minutes": "{minutes} minutes",
   "common.text.noAssignedInstructor": "No assigned instructor.",
   "common.text.purchasedAt": "{name} purchased at {date}",
   "common.text.resetPasswordNotation": "為了安全考量，請至信箱收信更換密碼",
   "common.text.sentResetPasswordMail": "已寄送重設密碼信",
   "common.text.shortDescriptionPlaceholder": "limit in 30 characters",
+  "common.text.successfullyResetPasswordNotation": "已重設您的密碼，請回首頁並重新登入。",
   "common.text.totalActualSalse": "實際銷售總額 {dollars} 元",
   "common.text.totalActualSalseNotation": "銷售總額 - 訂閱首期折扣 = 實際銷售總額",
   "common.text.totalCount": "{count} in total",
   "common.ui.add": "Add",
+  "common.ui.addCategory": "Add Category",
   "common.ui.addInstructor": "Add Instructor",
   "common.ui.addToCart": "Add to Cart",
+  "common.ui.back": "Back",
+  "common.ui.backToHompage": "Back to homepage",
   "common.ui.buyNow": "Buy",
   "common.ui.cancel": "Cancel",
   "common.ui.cancelOrder": "Cancel Order",
@@ -242,6 +270,9 @@
   "common.ui.logout": "Logout",
   "common.ui.memberPageLink": "Member Page",
   "common.ui.or": "or",
+  "common.ui.preview": "Preview",
+  "common.ui.previewContent": "Content",
+  "common.ui.previewIntroduction": "Introduction",
   "common.ui.print": "Print",
   "common.ui.publish": "Publish",
   "common.ui.register": "Register",
@@ -276,6 +307,8 @@
   "error.form.selectInstructor": "username or Email",
   "error.form.voucherCodes": "Voucher codes is required",
   "error.route.notFound": "Route Not Found",
+  "error.text.deniedRolePermission": "Please login with app owner account.",
+  "error.text.forbidden": "Permission denied.",
   "layout.label.creatorStudio": "Creator Studio",
   "layout.label.ownerDashboard": "Owner Dashbaord",
   "membershipCard.label.endedAt": "end at {date}",
@@ -287,7 +320,10 @@
   "podcast.label.description": "Description",
   "podcast.label.duration": "Duration (minutes)",
   "podcast.label.plan": "Plan",
+  "podcast.label.podcastContent": "Content",
+  "podcast.label.podcastIntroduction": "Introduction",
   "podcast.label.podcastProgramTitle": "Podcast Program Title",
+  "podcast.label.podcastSettings": "Podcast Settings",
   "podcast.label.salesCount": "Sales Count",
   "podcast.label.status": "Status",
   "podcast.status.notPublished": "Not Published",
@@ -308,6 +344,7 @@
   "podcast.text.podcastCoverTips": "Recommended size: 1080*1080px",
   "podcast.text.publishedNotation": "現在你的廣播已經發佈，此廣播並會出現在頁面上，學生將能購買此廣播。",
   "podcast.text.unpublishedNotation": "因你的廣播未發佈，此廣播並不會顯示在頁面上，學生也不能購買此廣播。",
+  "podcast.ui.createPodcastPlan": "Create",
   "podcast.ui.createPodcastProgram": "Create",
   "podcast.ui.subscribe": "Subscribe",
   "podcast.ui.uploadAudioFile": "Upload Audio File",
@@ -344,7 +381,6 @@
   "program.label.programOwner": "Program Owner",
   "program.label.programPlanType": "Program Plan Type",
   "program.label.programPublishingSettings": "Publish",
-  "program.label.programSalesPlan": "Sales Plan",
   "program.label.programSettings": "Program Settings",
   "program.label.programTitle": "Program Title",
   "program.label.subscriptionPlan": "Subscription Plan",
@@ -358,6 +394,7 @@
   "program.text.deleteProgramWarning": "請仔細確認是否真的要刪除課程，因為一旦刪除就無法恢復。",
   "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
+  "program.text.empty": "No program issue",
   "program.text.enrolledCount": "Subscriber count: {count}",
   "program.text.enrolledPerpetualCount": "Purchased count: {count}",
   "program.text.isPublishedNotation": "現在你的課程已經發佈，此課程並會出現在頁面上，學生將能購買此課程。",
@@ -420,6 +457,7 @@
   "promotion.text.exchangeNotation": "兌換券為一次使用後失效，請一次兌換完畢",
   "promotion.text.exchangedCount": "{exchanged}/{total} 張",
   "promotion.ui.addVoucher": "Add Voucher",
+  "promotion.ui.createCouponPlan": "Create",
   "promotion.ui.createVoucherPlan": "Create Voucher Plan",
   "promotion.ui.custom": "Custom",
   "promotion.ui.editCouponPlan": "Edit Coupon Plan",
