[BUGFIX] improve translation keys

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -1,15 +1,13 @@
 {
   "activity.label.activityIntroduction": "Activity Introduction",
   "activity.label.limit": "Limit",
-  "activity.label.publishSettings": "Publish Settings",
+  "activity.label.publishSettings": "Publish",
   "activity.label.published": "Published",
-  "activity.label.sessionAdmin": "Session Admin",
+  "activity.label.sessionAdmin": "Session",
   "activity.label.settings": "Settings",
   "activity.label.showParticipantsNumber": "Show Participants Count",
   "activity.label.ticketEndedAt": "Ticket End Time",
   "activity.label.ticketStartedAt": "Ticket Starting Time",
-  "activity.status.NotPublishedTicket": "Suspended.",
-  "activity.status.PublishedTicket": "Published.",
   "activity.status.aboutToStart": "About to Start",
   "activity.status.draft": "Draft",
   "activity.status.expired": "Expired",
@@ -17,7 +15,9 @@
   "activity.status.hidden": "Hidden",
   "activity.status.holding": "Holding",
   "activity.status.notPublished": "Not Published",
+  "activity.status.notPublishedTicket": "Suspended.",
   "activity.status.public": "Show",
+  "activity.status.publishedTicket": "Published.",
   "activity.status.selling": "Selling",
   "activity.status.soldOut": "Sold Out",
   "activity.status.starting": "Starting",
@@ -47,16 +47,16 @@
   "appointment.label.enrollments": "Enrollments",
   "appointment.label.instructor": "Instructor",
   "appointment.label.minutes": "Minutes",
-  "appointment.label.people": "people",
+  "appointment.label.people": "{count} {count, plural, one {person} other {people}}",
   "appointment.label.perDay": "per day",
   "appointment.label.perMonth": "per month",
   "appointment.label.perWeek": "per week",
   "appointment.label.perYear": "per year",
-  "appointment.label.periodSettings": "Period",
   "appointment.label.planDescription": "Description",
   "appointment.label.planSettings": "Plan",
   "appointment.label.price": "Price",
   "appointment.label.salesSettings": "Sales",
+  "appointment.label.scheduleSettings": "Schedule",
   "appointment.label.seriesPeriod": "series",
   "appointment.label.singlePeriod": "period",
   "appointment.label.status": "Status",
@@ -69,7 +69,7 @@
   "appointment.status.notPublished": "Not Published",
   "appointment.term.period": "Period",
   "appointment.term.periodType": "Period Type",
-  "appointment.term.planTitle": "Plan Title",
+  "appointment.term.planTitle": "Title",
   "appointment.term.startedAt": "Starting Time",
   "appointment.text.durationTips": "設定單次預約服務的時間長度",
   "appointment.text.noDuration": "No duration.",
@@ -99,7 +99,7 @@
   "common.event.successfullySaved": "Saved",
   "common.event.successfullyUpdatePassword": "Password Updated",
   "common.isContentCreator": "Content Creator",
-  "common.label.adminBackStage": "Admin Back Stage",
+  "common.label.adminBackstage": "Admin Backstage",
   "common.label.all": "All",
   "common.label.allActivityTicket": "All activities",
   "common.label.allMembers": "All Members",
@@ -128,7 +128,7 @@
   "common.label.memberPage": "My Page",
   "common.label.month": "month",
   "common.label.newPassword": "New Password",
-  "common.label.newPasswordAgain": "new passowrd again",
+  "common.label.newPasswordAgain": "new password again",
   "common.label.notMember": "Not a member?",
   "common.label.optional": "Optional",
   "common.label.orderLogDate": "Order Date",
@@ -144,18 +144,23 @@
   "common.label.profileBasic": "Basic",
   "common.label.programProgress": "Total Learning Statistics",
   "common.label.publishAdmin": "Publish",
-  "common.label.publishSettings": "Publish Settings",
+  "common.label.publishSettings": "Publish",
   "common.label.resetPassword": "Reset Password",
   "common.label.roleAdmin": "Role",
   "common.label.roleSettigs": "Role Settings",
   "common.label.salePriceEndTime": "End Time of Sale",
   "common.label.salesPlan": "Sales",
-  "common.label.selectInstructor": "Select Instructor",
+  "common.label.selectInstructor": "Instructor",
   "common.label.sellingStatus": "Selling Status",
   "common.label.sessionTitle": "Session Title",
+  "common.label.shortenDay": "day",
+  "common.label.shortenMonth": "month",
+  "common.label.shortenWeek": "week",
+  "common.label.shortenYear": "year",
   "common.label.totalPrice": "Total",
   "common.label.totalSales": "Total",
   "common.label.unavailableSelling": "Unavailable Now",
+  "common.label.unknownPeriod": "Unknown Period",
   "common.label.video": "Video",
   "common.label.week": "week",
   "common.label.year": "year",
@@ -166,7 +171,8 @@
   "common.menu.appointmentPlans": "Appointment Plans",
   "common.menu.appointments": "Appointments",
   "common.menu.categories": "Categories",
-  "common.menu.coupons": "Coupons",
+  "common.menu.couponPlans": "Coupon Plans",
+  "common.menu.coupons": "折價券",
   "common.menu.creatorSettings": "Creator Settings",
   "common.menu.members": "Members",
   "common.menu.ownerSettings": "Owner Settings",
@@ -179,7 +185,8 @@
   "common.menu.programs": "Programs",
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
-  "common.menu.vouchers": "Vouchers",
+  "common.menu.voucherPlans": "Voucher Plans",
+  "common.menu.vouchers": "兌換券",
   "common.status.notComplete": "Not Complete",
   "common.status.orderFailed": "Failed",
   "common.status.orderRefund": "Refund",
@@ -189,6 +196,7 @@
   "common.status.unpublished": "Unpublished",
   "common.term.account": "Account",
   "common.term.activityTicket": "Activity Ticket",
+  "common.term.anonymous": "匿名使用者",
   "common.term.appOwner": "App Owner",
   "common.term.avatar": "Avatar",
   "common.term.card": "Membership Card",
@@ -200,7 +208,7 @@
   "common.term.email": "Email",
   "common.term.endedAt": "End Time",
   "common.term.generalMember": "General Member",
-  "common.term.instructor": "instructor",
+  "common.term.instructor": "Instructor",
   "common.term.learningDuration": "Learning Duration",
   "common.term.learningProgress": "Learning Progress",
   "common.term.listPrice": "List Price",
@@ -209,13 +217,13 @@
   "common.term.name": "Name",
   "common.term.owner": "Owner",
   "common.term.password": "Password",
-  "common.term.periodType": "Period Type",
+  "common.term.periodType": "Period",
   "common.term.phone": "Phone",
   "common.term.planDescription": "Plan Description",
   "common.term.planTitle": "Plan title",
   "common.term.price": "price",
   "common.term.program": "Program",
-  "common.term.programContent": "Program Content",
+  "common.term.programContent": "Content",
   "common.term.programPlan": "Program Plan",
   "common.term.salePrice": "Sale Price",
   "common.term.shortDescription": "Short Description",
@@ -223,7 +231,8 @@
   "common.term.startedAt": "Starting Time",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
-  "common.term.unknowProduct": "Unknow Product",
+  "common.term.unknownProduct": "Unknown Product",
+  "common.term.unknownRole": "未知身份",
   "common.term.username": "Username or Email",
   "common.text.checkEmailNotation": "Check email and change password.",
   "common.text.deleteCategoryNotation": "確定要刪除此類別？此動作無法復原",
@@ -241,7 +250,7 @@
   "common.text.successfullyResetPasswordNotation": "已重設您的密碼，請回首頁並重新登入。",
   "common.text.totalActualSalse": "實際銷售總額 {dollars} 元",
   "common.text.totalActualSalseNotation": "銷售總額 - 訂閱首期折扣 = 實際銷售總額",
-  "common.text.totalCount": "{count} in total",
+  "common.text.totalCount": "{count} results",
   "common.ui.add": "Add",
   "common.ui.addCategory": "Add Category",
   "common.ui.addInstructor": "Add Instructor",
@@ -284,9 +293,9 @@
   "common.ui.search": "Search",
   "common.ui.sendEmailAgain": "Send Again",
   "common.ui.trial": "Trial",
-  "coommon.term.contentCreator": "Content Creator",
+  "common.term.contentCreator": "Content Creator",
   "creator.label.creatorAppointemnts": "Appointment",
-  "creator.label.creatorPodcast": "Podcats Program",
+  "creator.label.creatorPodcast": "Podcast Program",
   "creator.label.creatorPrograms": "Program",
   "error.data.fetch": "Loading Failed",
   "error.event.checkSamePassword": "Confirmed password is not match to new password",
@@ -299,8 +308,8 @@
   "error.form.date": "select date",
   "error.form.duration": "Duration is required.",
   "error.form.emailFormat": "not a valid email",
-  "error.form.exchangeItems": "Exchangable item is required.",
-  "error.form.exchangeItemsAmount": "Amount of exchangable items is required.",
+  "error.form.exchangeItems": "Exchangeable item is required.",
+  "error.form.exchangeItemsAmount": "Amount of exchangeable items is required.",
   "error.form.isRequired": "{field} is required",
   "error.form.issueContent": "content is required",
   "error.form.memberSelect": "username or Email",
@@ -310,9 +319,9 @@
   "error.text.deniedRolePermission": "Please login with app owner account.",
   "error.text.forbidden": "Permission denied.",
   "layout.label.creatorStudio": "Creator Studio",
-  "layout.label.ownerDashboard": "Owner Dashbaord",
+  "layout.label.ownerBackstage": "Owner Backstage",
   "membershipCard.label.endedAt": "end at {date}",
-  "membershipCard.label.noLimit": "forever",
+  "membershipCard.label.noLimit": "Forever",
   "membershipCard.label.selectMembershipCard": "Select Membership Card",
   "notification.term.notification": "Notification",
   "notification.ui.checkNotifications": "read more",
@@ -322,8 +331,8 @@
   "podcast.label.plan": "Plan",
   "podcast.label.podcastContent": "Content",
   "podcast.label.podcastIntroduction": "Introduction",
-  "podcast.label.podcastProgramTitle": "Podcast Program Title",
-  "podcast.label.podcastSettings": "Podcast Settings",
+  "podcast.label.podcastProgramTitle": "Title",
+  "podcast.label.podcastSettings": "Settings",
   "podcast.label.salesCount": "Sales Count",
   "podcast.label.status": "Status",
   "podcast.status.notPublished": "Not Published",
@@ -364,7 +373,7 @@
   "program.label.contentSorting": "Content Sorting",
   "program.label.contentTitle": "Title",
   "program.label.createProgram": "Create Program",
-  "program.label.deleteIssuePrompt": "The commets of the issue will be deleted.",
+  "program.label.deleteIssuePrompt": "The comments of the issue will be deleted.",
   "program.label.deleteProgram": "Delete Program",
   "program.label.duration": "Duration (minutes)",
   "program.label.introductionVideo": "Introduction Video",
@@ -372,31 +381,31 @@
   "program.label.permissiontype": "選擇內容觀看權限",
   "program.label.perpetualPlanType": "Perpetual Plan",
   "program.label.planDescription": "Plan Description",
-  "program.label.planTitle": "Plan Title",
+  "program.label.planTitle": "Title",
   "program.label.programAbstract": "Program Abstract",
-  "program.label.programContent": "Program Content",
-  "program.label.programCover": "Program cover",
+  "program.label.programContent": "Content",
+  "program.label.programCover": "Cover Image",
   "program.label.programDescription": "Program Description",
   "program.label.programIntroduction": "Program Introduction",
   "program.label.programOwner": "Program Owner",
-  "program.label.programPlanType": "Program Plan Type",
+  "program.label.programPlanType": "Plan Type",
   "program.label.programPublishingSettings": "Publish",
-  "program.label.programSettings": "Program Settings",
+  "program.label.programSettings": "Settings",
   "program.label.programTitle": "Program Title",
+  "program.label.subscriptionPeriodType": "Period Type",
   "program.label.subscriptionPlan": "Subscription Plan",
   "program.label.subscriptionPlanType": "Subscription Plan",
   "program.label.unavailableForPastContent": "不可看過去內容",
-  "program.lable.subscriptionPeriodType": "Period Type",
-  "program.status.issueOpen": "solving",
-  "program.status.issueSolved": "solved",
+  "program.status.issueOpen": "Open",
+  "program.status.issueSolved": "Solved",
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
   "program.text.deleteProgramDanger": "注意：只有在無人購買的情況下才能刪除課程。",
   "program.text.deleteProgramWarning": "請仔細確認是否真的要刪除課程，因為一旦刪除就無法恢復。",
   "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
   "program.text.empty": "No program issue",
-  "program.text.enrolledCount": "Subscriber count: {count}",
-  "program.text.enrolledPerpetualCount": "Purchased count: {count}",
+  "program.text.enrolledPerpetualCount": "Purchased: {count}",
+  "program.text.enrolledSubscriptionCount": "Subscribed: {count}",
   "program.text.isPublishedNotation": "現在你的課程已經發佈，此課程並會出現在頁面上，學生將能購買此課程。",
   "program.text.isUnpublishedNotation": "因你的課程未發佈，此課程並不會顯示在頁面上，學生也不能購買此課程。",
   "program.text.memberWatchOnly": "{name} only",
@@ -432,7 +441,7 @@
   "promotion.label.disountHelp": "折抵方式為比例時，額度範圍為 0 - 100",
   "promotion.label.exchangeItems": "Exchangeable Items",
   "promotion.label.exchangeItemsAmount": "Amount of Exchangeable Items",
-  "promotion.label.forever": "forever",
+  "promotion.label.forever": "Forever",
   "promotion.label.fromNow": "Now",
   "promotion.label.price": "{amount}",
   "promotion.label.ratio": "{amount}%",
@@ -443,16 +452,16 @@
   "promotion.term.amount": "amount",
   "promotion.term.couponCode": "Coupon Code",
   "promotion.term.couponCodes": "Coupon",
-  "promotion.term.couponPlanTitle": "Coupont Plan Title",
-  "promotion.term.description": "Description and limit",
+  "promotion.term.couponPlanTitle": "Title",
+  "promotion.term.description": "Description and Limit",
   "promotion.term.discount": "Discount",
   "promotion.term.dollar": "dollars",
   "promotion.term.priceType": "amount",
   "promotion.term.ratioType": "ratio",
   "promotion.term.voucherCode": "Voucher Code",
   "promotion.term.voucherCodes": "Voucher",
-  "promotion.term.voucherPlanTitle": "Voucher Plan Title",
-  "promotion.text.enterVoucherCode": "vocher code",
+  "promotion.term.voucherPlanTitle": "Title",
+  "promotion.text.enterVoucherCode": "voucher code",
   "promotion.text.exchangeItemsNumber": "可兌換 {number} 個項目",
   "promotion.text.exchangeNotation": "兌換券為一次使用後失效，請一次兌換完畢",
   "promotion.text.exchangedCount": "{exchanged}/{total} 張",
