[FEATURE] unify admin braft editors

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -98,7 +98,7 @@
   "common.event.successfullyCreated": "Created",
   "common.event.successfullySaved": "Saved",
   "common.event.successfullyUpdatePassword": "Password Updated",
-  "common.isContentCreator": "Content Creator",
+  "common.isContentCreator": "Instructor",
   "common.label.adminBackstage": "Admin Backstage",
   "common.label.all": "All",
   "common.label.allActivityTicket": "All activities",
@@ -123,7 +123,7 @@
   "common.label.goToLogin": "Login",
   "common.label.holdingPoints": "Points",
   "common.label.introduction": "Introduction",
-  "common.label.isAppOwner": "App Owner",
+  "common.label.isAppOwner": "Administrator",
   "common.label.lastLogin": "Last Login",
   "common.label.memberPage": "My Page",
   "common.label.month": "month",
@@ -172,7 +172,6 @@
   "common.menu.appointments": "Appointments",
   "common.menu.categories": "Categories",
   "common.menu.couponPlans": "Coupon Plans",
-  "common.menu.coupons": "折價券",
   "common.menu.creatorSettings": "Creator Settings",
   "common.menu.members": "Members",
   "common.menu.ownerSettings": "Owner Settings",
@@ -186,7 +185,6 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.voucherPlans": "Voucher Plans",
-  "common.menu.vouchers": "兌換券",
   "common.status.notComplete": "Not Complete",
   "common.status.orderFailed": "Failed",
   "common.status.orderRefund": "Refund",
@@ -201,6 +199,7 @@
   "common.term.avatar": "Avatar",
   "common.term.card": "Membership Card",
   "common.term.category": "Category",
+  "common.term.contentCreator": "Content Creator",
   "common.term.cover": "Cover",
   "common.term.creatorTitle": "Title",
   "common.term.currentPassword": "Current Password",
@@ -293,7 +292,6 @@
   "common.ui.search": "Search",
   "common.ui.sendEmailAgain": "Send Again",
   "common.ui.trial": "Trial",
-  "common.term.contentCreator": "Content Creator",
   "creator.label.creatorAppointemnts": "Appointment",
   "creator.label.creatorPodcast": "Podcast Program",
   "creator.label.creatorPrograms": "Program",
@@ -366,7 +364,6 @@
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
   "program.label.availableForPastContent": "可看過去內容",
-  "program.label.basicSettings": "Basic",
   "program.label.contentContext": "Content",
   "program.label.contentMenu": "Content Menu",
   "program.label.contentPlan": "Content Plan",
